Fix report scroll jumping on typing in an editor due to change in rendered content height

--- a/src/pages/report.css
+++ b/src/pages/report.css
@@ -6,6 +6,9 @@
 .page-report {
     padding-top: 0;
 }
+.page-report > .report-content {
+    min-height: calc(100vh - 121px);
+}
 
 /********************************
 * Error
